@@ -1,3 +1,8 @@
+2004-10-13  Richard Hoelscher  <rah@rahga.com>
+
+	* glines.c: Use games_preimage in place of gdk_pixbuf loading and
+	scaling, to provide better SVG support.
+
 2004-10-11  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* glines.c: Use the new games_gridframe_set_padding API to get the
